deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-world
          image: 190743/hello-world
          ports:
            - containerPort: 8080
