service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  selector:
    app: hello-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
